# torch2webnn

./: .gitignore  ADDING_OPS.md  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/flux_klein/: _common.py  export_autoencoder.py  export_decoder.py  export_flow.py  export_text_encoder.py  main.py  requirements.txt
tests/: __init__.py  conftest.py  models.py  test_arange.py  test_batch_norm.py  test_mnist_integration.py  test_multiple_inputs.py  test_operations.py  test_rearrange.py  test_shape_operations.py  test_single_ops.py  test_unary_ops.py  test_upsample.py
webnn_torch_export/: __init__.py  executor.py  exporter.py  webnn_generator.py  webnn_op_mappings.py
